# pycli

./: README.md  pyproject.toml
pycli/: __init__.py  cli.py  config.py
