[tool.poetry]
name = "pycli"
version = "1.0.0"
description = "pycli is a template for building CLI tools with Python."
authors = ["jonxola"]

[tool.poetry.scripts]
pycli = 'pycli:run'

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
